Исправление юнит тестов, связанных с установкой уведомлений