@@ -3,31 +3,31 @@ package botLogic;
 import JavaBots.Bot;
 import botLogic.dataBase.Data;
 import botLogic.parser.Parser;
+import botLogic.utils.Calendar;
 import botLogic.utils.Time;
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.*;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.Mock;
-import org.mockito.Mockito;
+import org.mockito.*;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
 
 import java.io.IOException;
 import java.sql.SQLException;
-import java.time.LocalDate;
+import java.time.*;
 import java.util.Arrays;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.concurrent.ScheduledExecutorService;
-import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 /**
  * Проверка обработки команд
  */
 @ExtendWith(MockitoExtension.class)
+@TestMethodOrder(MethodOrderer.MethodName.class)
 @MockitoSettings(strictness = Strictness.LENIENT)
 public class CommandTest {
     @Mock
@@ -42,18 +42,24 @@ public class CommandTest {
     @Mock
     Bot bot;
 
-    @Mock
-    Time time;
+    MockedStatic<Clock> clockMock;
 
+    Time time;
     User user;
     Logic logic;
 
-    List<String> schedule = Arrays.asList("8:00 Матан", "-", "10:00 Алгем");
-    List<List<String>> weekSchedule = Arrays.asList(schedule);
-    String id = "228";
-    String group = "МЕН-220201";
-    String date = "1.12";
-    int shiftDay = 1;                                                   //Monday
+    @Captor
+    ArgumentCaptor<Runnable> runnableCaptor;
+
+    @Captor
+    ArgumentCaptor<String> stringCaptor;
+
+    final LocalDate localDate = LocalDate.of(2023, 11, 27);
+    final String dateString = "%s.%s".formatted(localDate.getDayOfMonth(), localDate.getMonthValue());
+    final LocalTime localTime = LocalTime.of(6, 0);
+    final List<String> schedule = Arrays.asList("8:00 Матан", "10:00 Алгем", "12:00 Дискретка");
+    final String id = "T228";
+    final String group = "МЕН-220201";
 
     /**
      * Инициализация переменных database, parser, user перед каждым тестом
@@ -63,24 +69,43 @@ public class CommandTest {
      */
     @BeforeEach
     public void MockitoInit() throws SQLException, IOException, NoSuchElementException{
+        time = new Calendar();
         user = new User(database, id, parser, time, bot, scheduler);
         logic = new Logic(database, parser, time, scheduler);
 
-        Mockito.when(time.getSecondsOfDay()).thenReturn(6 * 60 * 60);                         //6:00
-        Mockito.when(time.getSecondsUtilTomorrow()).thenReturn(18 * 60 * 60);                 //18 часов
+        ZoneId zoneId = ZoneId.systemDefault();
+        LocalDateTime localDateTime = LocalDateTime.of(localDate, localTime);
+        Instant instant = localDateTime.atZone(zoneId).toInstant();
+        Instant fixedInstant = Instant.ofEpochMilli(instant.toEpochMilli());    //в миллисекундах
+        Clock fixedClock = Clock.fixed(fixedInstant, zoneId);
 
-        Mockito.when(time.getSecondsOfDay(schedule.get(0))).thenReturn(8 * 60 * 60);          //8:00
-        Mockito.when(time.getSecondsOfDay(schedule.get(2))).thenReturn(10 * 60 * 60);         //10:00
-        Mockito.when(time.getLocalDate(date)).thenReturn(LocalDate.of(2023, 12, 1));    //1.12 (год не важен)
-        Mockito.when(time.getShift(Mockito.any(LocalDate.class))).thenReturn(1);                //Понедельник
+        clockMock = Mockito.mockStatic(Clock.class);
+        clockMock.when(Clock::systemDefaultZone).thenReturn(fixedClock);
+        Assertions.assertEquals(localTime, LocalTime.now());
+
+//        Mockito.when(time.getSecondsOfDay()).thenReturn(6 * 60 * 60);                         //6:00
+//        Mockito.when(time.getSecondsUtilTomorrow()).thenReturn(18 * 60 * 60);                 //18 часов
+//        Mockito.when(time.getSecondsOfDay(schedule.get(0))).thenReturn(8 * 60 * 60);          //8:00
+//        Mockito.when(time.getSecondsOfDay(schedule.get(2))).thenReturn(10 * 60 * 60);         //10:00
+//        Mockito.when(time.getLocalDate(date)).thenReturn(LocalDate.of(2023, 12, 1));    //1.12 (год не важен)
+//        Mockito.when(time.getShift(Mockito.any(LocalDate.class))).thenReturn(shiftDay);                //Понедельник
+//        Mockito.when(time.getShift()).thenReturn(shiftDay);                //Понедельник
 
         Mockito.when(database.getUsersGroup(id)).thenReturn(group);
         Mockito.when(database.getNotificationShift(id)).thenReturn(10);                      //10 минут
-        Mockito.when(database.getSchedule(id, shiftDay)).thenReturn(schedule);
+        Mockito.when(database.getSchedule(id, time.getShift())).thenReturn(schedule);
         Mockito.when(database.tableIsExist(group)).thenReturn(true);
-        Mockito.when(database.getUserIdNotification()).thenReturn(Arrays.asList(id));
+        Mockito.when(database.getUserIdNotification()).thenReturn(List.of(id));
 
-        Mockito.when(parser.parse(time, group)).thenReturn(weekSchedule);
+        Mockito.when(parser.parse(time, group)).thenReturn(List.of(schedule));
+    }
+
+    /**
+     * Удаление mock объектов перед стартов нового теста
+     */
+    @AfterEach
+    public void MockitoAfter(){
+        clockMock.close();
     }
 
     /**
@@ -88,11 +113,11 @@ public class CommandTest {
      */
     @Test
     public void getScheduleVerifyTest(){
-        user.processMessage("/schedule");
-        String answer = user.processMessage("1.12");
-        Assertions.assertEquals("8:00 Матан\n" +
-                                         "-\n" +
-                                         "10:00 Алгем\n", answer);
+            user.processMessage("/schedule");
+            String answer = user.processMessage(dateString);
+
+            String stringSchedule = String.join("\n", schedule) + "\n";
+            Assertions.assertEquals(stringSchedule, answer);
     }
 
     /**
@@ -103,7 +128,7 @@ public class CommandTest {
         Mockito.when(database.getUsersGroup(id)).thenThrow(SQLException.class);
 
         user.processMessage("/schedule");
-        String answer = user.processMessage("1.12");
+        String answer = user.processMessage(dateString);
 
         Assertions.assertEquals("Для начала укажите свою группу", answer);
     }
@@ -160,14 +185,14 @@ public class CommandTest {
      */
     @Test
     public void changeGroupNoSuchGroupTest() throws IOException, SQLException{
-        Mockito.when(parser.parse(Mockito.any(), Mockito.anyString())).thenThrow(NoSuchElementException.class);
+        Mockito.when(parser.parse(time, group)).thenThrow(NoSuchElementException.class);
 
         user.processMessage("/change_group");
         String answer = user.processMessage(group);
 
+        Assertions.assertEquals("Не удалось найти группу с таким номером", answer);
         Mockito.verify(parser).parse(time, group);
         Mockito.verify(database, Mockito.never()).setSchedule(Mockito.anyString(), Mockito.any());
-        Assertions.assertEquals("Не удалось найти группу с таким номером", answer);
     }
 
     /**
@@ -176,13 +201,15 @@ public class CommandTest {
      */
     @Test
     public void changeScheduleVerifyTest() throws SQLException{
+        List<String> customSchedule = List.of("8:00 Матан", "10:00 Алгем");
+        String customScheduelString = String.join("\n", customSchedule);
+
         user.processMessage("/change_schedule");
-        user.processMessage("1.12");
-        String answer = user.processMessage("8:00 Матан\n" +
-                                            "10:00 Алгем");
+        user.processMessage(dateString);
+        String answer = user.processMessage(customScheduelString);
 
         Assertions.assertEquals("Расписание обновлено", answer);
-        Mockito.verify(database).setCastomSchedule(id, List.of("8:00 Матан", "10:00 Алгем"), shiftDay);
+        Mockito.verify(database).setCastomSchedule(id, customSchedule, time.getShift());
     }
 
     /**
@@ -191,17 +218,10 @@ public class CommandTest {
      */
     @Test
     public void nextLessonVerify() throws SQLException{
-        user.processMessage("/next_lesson");
-        Mockito.verify(database).getNextLesson(id, time.getShift(LocalDate.now()), time.getSecondsOfDay() / 60);
-    }
+        String answer = user.processMessage("/next_lesson");
 
-    /**
-     * Проверка корректной работы установщика уведомлений
-     */
-    @Test
-    public void notificationUpdateDefaultTest(){
-        logic.updateNotification(bot);
-        Mockito.verify(scheduler, Mockito.times(1)).schedule(Mockito.any(Runnable.class), Mockito.eq((long)(18 * 60 * 60)), Mockito.eq(TimeUnit.SECONDS));
+        Assertions.assertEquals(schedule.get(0), answer);
+        Mockito.verify(database).getSchedule(id, time.getShift());
     }
 
     /**
@@ -212,9 +232,12 @@ public class CommandTest {
         String answer = user.processMessage("/notification_on");
 
         Assertions.assertEquals("Уведомления включены", answer);
-        Mockito.verify(scheduler).schedule(Mockito.any(Runnable.class), Mockito.eq((long)(2 * 60 - 10) *  60), Mockito.eq(TimeUnit.SECONDS));
-        Mockito.verify(scheduler).schedule(Mockito.any(Runnable.class), Mockito.eq((long)(4 * 60 - 10) *  60), Mockito.eq(TimeUnit.SECONDS));
-        Mockito.verify(scheduler, Mockito.times(2)).schedule(Mockito.any(Runnable.class), Mockito.anyLong(), Mockito.eq(TimeUnit.SECONDS));
+        Mockito.verify(scheduler, Mockito.times(group.length())).schedule(Mockito.any(Runnable.class), Mockito.anyLong(), Mockito.eq(TimeUnit.SECONDS));
+        for(String lesson : schedule) {
+            Mockito.verify(scheduler).schedule(runnableCaptor.capture(), Mockito.eq(time.getSecondsOfDay(lesson)), Mockito.eq(TimeUnit.SECONDS));
+            runnableCaptor.getValue().run();
+            Mockito.verify(bot).sendMessage(Long.parseLong(id.substring(1)), lesson);
+        }
     }
 
     /**
@@ -238,7 +261,7 @@ public class CommandTest {
         int timeShift = 50;
 
         user.processMessage("/notification_set");
-        String answer = user.processMessage("50");
+        String answer = user.processMessage(Integer.toString(timeShift));
 
         Assertions.assertEquals("Время установлено", answer);
         Mockito.verify(database).setNotificationShift(id, timeShift);
